# deltatorch

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: black.yml  ci.yml  flake8.yml  lint.yml
deltatorch/: __init__.py  deltadataset.py  deltadatasetv2.py  id_based_deltadataset.py  pytorch.py  skip_batch_deltadataset.py
examples/: caltech_data_prep.py  cifar_data_prep.py  cv_caltech256_ddp.py  cv_caltech256_ddp_mr.py  cv_caltech256_ddp_mr_original.py  cv_caltech256_ddp_script.py  cv_caltech256_petastorm.py  cv_caltech256_ptl_singlenode.py  cv_cifar10_singlenode.py  image_classification_using_pytorch_lightning.py  image_classification_using_pytorch_lightning_caltech256.py  imagenet_data_prep.py  news_torchtext_example.py  nlp_agnews_torchtext_singlenode.py
examples/caltech/: cv_caltech256_sparktorchdistributor_native_pytoch.py  cv_caltech256_sparktorchdistributor_torchvision_dataset.py
examples/diffusers_unconditional_image_generation/: data_prep.py  run.py  train_unconditional.py
examples/difusers_stable_diffusion/: data_prep.py  run.py  train_text_to_image_lora.py
examples/imagenet/: data_preparation.py  ddp_spark_pytorch_distributor.py
examples/spark_pytorch_distributor/: __init__.py  mirror_runner.py
old_examples/: cifar_data_prep.py  cv_caltech256_petastorm.py  cv_cifar10_singlenode.py
requirements/: base.in  base.txt  test.in  test.txt
scripts/: create_venv.sh
tests/: test_delta_pipe.py  test_deltadatasetv2.py  test_deltatorch_dataloader.py  test_id_based_deltadataset.py  test_skip_deltadataset.py
torchdelta/: __init__.py  deltadataset.py  deltapipe.py  pytorch.py
